Введення тексту з консолі, виведення тексту в конслоль, шифрування, виведення результату в консоль

--- a/OOPLab2Tpl/OOPLab2Tpl.vcxproj
+++ b/OOPLab2Tpl/OOPLab2Tpl.vcxproj
@@ -142,10 +142,12 @@
     <ClCompile Include="Examples.cpp" />
     <ClCompile Include="Tasks.cpp" />
     <ClCompile Include="OOPLab2Tpl.cpp" />
+    <ClCompile Include="TTask2.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Examples.h" />
     <ClInclude Include="Tasks.h" />
+    <ClInclude Include="TTask2.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
