--- a/OOPLab2Tpl/OOPLab2Tpl.vcxproj.filters
+++ b/OOPLab2Tpl/OOPLab2Tpl.vcxproj.filters
@@ -24,12 +24,18 @@
     <ClCompile Include="Examples.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="TTask2.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Tasks.h">
       <Filter>Исходные файлы</Filter>
     </ClInclude>
     <ClInclude Include="Examples.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="TTask2.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
